--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       </div>
     </section>
     <!--------------------------------------- section2  ------------------------->
-    <section class="section2 pt-5 bg-light" id="Services" >
+    <section class="section2 pt-5 bg-light"  >
       <div class="">
         <div class="position-relative">
           <div
@@ -574,7 +574,7 @@
     </section>
 
     <!-----------------------------------------------section3----------------------------->
-    <section class="section3 pt-5 mb-5 overflow-auto " id="Testimonials">
+    <section class="section3 pt-5 mb-5 overflow-auto " id="Services" >
       <div class="">
         <div class="position-relative">
           <div
@@ -1096,7 +1096,7 @@
       </div>
     </section>
     <!--------------------------------------section4---------------------------------------------->
-    <section class="section4 pt-5 pb-5" id="FAQ">
+    <section class="section4 pt-5 pb-5" id="Testimonials" >
       <div class="">
         <div class="position-relative">
           <div
@@ -1303,7 +1303,7 @@
       <!-- </div> -->
     </section>
     <!--------------------------------------section5--------------------->
-    <section class="section5 my-5 " id="Contact">
+    <section class="section5 my-5 " id="FAQ" >
       <div class="">
         <div class="position-relative">
           <div
@@ -1524,7 +1524,7 @@
       </div>
     </section> 
     <!------------------------section6--------------------------------------------------------------->
-    <section class="py-5 my-5">
+    <section class="py-5 my-5" id="Contact">
       <div class=" container">
       <div class="">
         <div class="position-relative">
