--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item me-4">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+              <a class="nav-link " aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a
